--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./blog.html">Poetry</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -270,7 +273,7 @@
             </div>
         </div>
         <div class="row justify-content-center" style="margin-top: 30px;">
-        <button id="formbutton" type="button" class="btn btn-light">Send</button>
+        <button id="formbutton" type="button" class="btn btn-light" onsubmit="">Send</button>
         </div>
     </form>
     <div class="response">Thanks for the response!</div>
@@ -353,20 +356,9 @@
 <!--fa js-->
 <!--wow js-->
 <script src="lib/wow/wow.min.js"></script>
-<!--Firebase-->
-<!--<script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
-<script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyDAlmLfNXSz4-RZxbwE-Y2y3rOmE5Br6fQ",
-        authDomain: "ash36mywebsite.firebaseapp.com",
-        databaseURL: "https://ash36mywebsite.firebaseio.com",
-        projectId: "ash36mywebsite",
-        storageBucket: "",
-        messagingSenderId: "211789354632"
-    };
-    firebase.initializeApp(config);
-</script>-->
+<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+
+
     <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
 </body>
