--- a/index.html
+++ b/index.html
@@ -288,16 +288,20 @@
         <div>
 
             <ul>
-                <li class="col-lg-2 col-md-4 col-sm-12">
-                    <a href="https://www.facebook.com/ashwin36" target="_blank">Facebook</a>
+                <li class="col-lg-2 col-md-4 col-sm-12" >
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    <a >Facebook</a>
                 </li>
                 <li class="col-lg-2 col-md-4 col-sm-12">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
                     <a href="https://www.instagram.com/_ashwin_g_" target="_blank">Instagram</a>
                 </li>
                 <li class="col-lg-2 col-md-4 col-sm-12">
+                    <i class="fa fa-github" aria-hidden="true"></i>
                     <a href="https://www.github.com/goelashwin36" target="_blank">Github</a>
                 </li>
                 <li class="col-lg-2 col-md-4 col-sm-12">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     <a href="https://www.linkedin.com/in/goelashwin36/" target="_blank">LinkedIn</a>
                 </li>
 
